@@ -56,12 +56,12 @@ sub execute {
   require App::Prove;
   require File::pushd;
   require File::Temp;
-  require Path::Class;
+  require Path::Tiny;
 
-  my $build_root = Path::Class::dir('.build');
+  my $build_root = Path::Tiny::path('.build');
   $build_root->mkpath unless -d $build_root;
 
-  my $target = Path::Class::dir( File::Temp::tempdir(DIR => $build_root) );
+  my $target = Path::Tiny::path( File::Temp::tempdir(DIR => $build_root) );
   $self->log("building test distribution under $target");
 
   local $ENV{AUTHOR_TESTING} = 1;
@@ -79,8 +79,8 @@ sub execute {
 
   my $app = App::Prove->new;
   if ( ref $arg eq 'ARRAY' && @$arg ) {
-    require Path::Class::Rule;
-    my $pcr = Path::Class::Rule->new->file->name(@$arg);
+    require Path::Iterator::Rule;
+    my $pcr = Path::Iterator::Rule->new->file->name(@$arg);
     my @t = map { "$_" } $pcr->all( 'xt' );
     if ( @t ) {
       $app->process_args(qw/-r -b/, @t) if @t;
